--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ueditor4tornado by jcteng</title>
+    <meta name="description" content="Ueditor4tornado : UEDITOR Tornado">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Ueditor4tornado</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Ueditor4tornado</h1>
-        <p class="header">UEDITOR Tornado</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/jcteng/ueditor4tornado/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/jcteng/ueditor4tornado/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/jcteng/ueditor4tornado">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/jcteng/ueditor4tornado">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jcteng">jcteng</a></p>
+          <h1 id="project_title">Ueditor4tornado</h1>
+          <h2 id="project_tagline">UEDITOR Tornado</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/jcteng/ueditor4tornado/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/jcteng/ueditor4tornado/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="ueditor4tornado" class="anchor" href="#ueditor4tornado" aria-hidden="true"><span class="octicon octicon-link"></span></a>ueditor4tornado</h1>
 
@@ -71,12 +72,17 @@ ueditor4tornado.registerHandler(application,<span class="pl-smi">withStatics</sp
     copy statics to your real static serve directory
     <span class="pl-k">from</span> D:\<span class="pl-ii">PycharmProjects\ueditor4tornado\projroot\ueditor4tornado/statics/</span></pre></div>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Ueditor4tornado maintained by <a href="https://github.com/jcteng">jcteng</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -86,6 +92,7 @@ ueditor4tornado.registerHandler(application,<span class="pl-smi">withStatics</sp
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
